--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -48,7 +48,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## About Jupyter notebooks\n",
+    "## About Jupyter notebooks"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A Juypter notebook is a runtime environment for executing code. A notebook consists of one or more cells. There are three types of cells in a notebook: Markdown, Code, and Output. This is a Markdown cell.\n",
     "\n",
     "A cell has two modes: read-mode and edit-mode. By default, the cells in a notebook are in read-mode. You can run a read-mode cell that is code. To execute a code cell, select the play icon in the cell's left gutter. \n",
@@ -169,15 +176,15 @@
     "#\n",
     "### Uncomment Gitpod specific\n",
     "#\n",
-    "#MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
-    "#MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA')\n",
-    "#MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
+    "MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
+    "MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA')\n",
+    "MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
     "#\n",
     "### Comment out Local \n",
     "#\n",
-    "MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
-    "MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_LOCAL')\n",
-    "MY_GITPOD_WORKSPACE_URL=os.environ.get('MY_GITPOD_WORKSPACE_URL_LOCAL')\n",
+    "# MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
+    "# MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_LOCAL')\n",
+    "# MY_GITPOD_WORKSPACE_URL=os.environ.get('MY_GITPOD_WORKSPACE_URL_LOCAL')\n",
     "##\n",
     "### End: Gitpod or local\n",
     "\n",
@@ -329,7 +336,7 @@
     "sleep 1;\n",
     "\n",
     "# Describe functions\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\df\""
+    "./bin/ysqlsh -d ${DB_NAME} -c \"\\df public.fn_*\""
    ]
   },
   {
@@ -369,7 +376,7 @@
     "./bin/ysqlsh -d ${DB_NAME} -f ${UTIL_YBTSERVER_METRICS_FILE} >&/dev/null\n",
     "\n",
     "# Describe relations\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\df\""
+    "./bin/ysqlsh -d ${DB_NAME} -c \"\\df public.fn_*\""
    ]
   },
   {
