--- a/02_YSQL_Development.ipynb
+++ b/02_YSQL_Development.ipynb
@@ -405,8 +405,10 @@
     "Get salary for an employee with a prepared statement that declares a fixed query with typed parameters to prevent SQL injection\n",
     "\n",
     "\n",
-    "Step 1: \n",
-    "Prepare a statement employee_salary with a parameterized query\n",
+    "#### Step 1: \n",
+    "Prepare a statement employee_salary with a parameterized query:\n",
+    "\n",
+    "`prepare stmt_employee_salary(int) as select ename, sal from tbl_employees where empno=$1`\n",
     "\n",
     "A prepared statement declares parameterized SQL. The following will display the name and salary for a provided employee number (as integer)."
    ]
@@ -581,6 +583,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -592,7 +595,7 @@
     "Create a new table and a specific index to avoid table scan and sorts\n",
     "\n",
     "\n",
-    "Step 1: Create a new demo table with randomly generated rows\n",
+    "#### Step 1: Create a new demo table with randomly generated rows\n",
     "\n",
     "`GENERATE_SERIES()` is a built-in function can generate rows. The following uses it to create a table with 42 rows and a random value from 1 to 10"
    ]
@@ -619,7 +622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 2: Create the index “demo_val” on demo table\n",
+    "#### Step 2: Create the index “demo_val” on demo table\n",
     "\n",
     "With the goal to query, for a value, with numbers ordered, in the most efficient way, the following creates an index on “val” (hashed for distribution) and “num” in ascending order. You can learn more about hashing and tablets in the next notebook."
    ]
@@ -667,10 +670,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 3: Gather optimizer statistics on table demo\n",
+    "#### Step 3: Gather optimizer statistics on table demo\n",
     "\n",
     "The query planner chooses the best access path when provided with statistics about the data stored in the table. The following gathers those statistics."
    ]
@@ -691,10 +695,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 4: Query the Top-3 numbers for a specific value\n",
+    "#### Step 4: Query the Top-3 numbers for a specific value\n",
     "\n",
     "The following displays the Top-3 numbers for the value 5"
    ]
@@ -720,10 +725,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 5: Verify that index is leading to faster query execution using explain analyze\n",
+    "#### Step 5: Verify that index is leading to faster query execution using explain analyze\n",
     "\n",
     "When defining an index for a specific access pattern, it is good that the developer verifies that the index is used. The following shows that an “Index Only Scan” was used, without the need for an additional “Sort” operation"
    ]
@@ -744,10 +750,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 6: Clean up the table for this exercise.\n",
+    "#### Step 6: Clean up the table for this exercise.\n",
     "\n",
     "To leave the database in the same state as before this exercise, the following removes the demo table created before"
    ]
@@ -874,12 +881,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Scenario 4. CROSSTABVIEW\n",
     "\n",
-    "`CROSSTABVIEW` is a client command to display rows as columns. The following sums the salaries across jobs and departments and displays them as a cross-table\n",
+    "`CROSSTABVIEW` is a client meta-command to display rows as columns. The following sums the salaries across jobs and departments and displays them as a cross-table\n",
     "\n",
     "Display total salary per job and department as a cross-table using bash"
    ]
@@ -905,6 +913,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -912,7 +921,9 @@
     "\n",
     "Split e-mails in 3 groups and format them\n",
     "\n",
-    "Description: In order to send e-mails to all employees in different batches, you will split them into 3 groups using the NTILE function, and format them with the FORMAT function and aggregate them in a comma-separated list with the STRING_AGG function"
+    "Description: In order to send e-mails to all employees in different batches, you will split them into 3 groups using the NTILE function, and format them with the FORMAT function and aggregate them in a comma-separated list with the STRING_AGG function.\n",
+    "\n",
+    "This is done using the following Common Table Expression, CTE:"
    ]
   },
   {
@@ -937,6 +948,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -948,7 +960,7 @@
     "\n",
     "Description: The skills are stored in the semi-structured JSON document. We can query them with @>, ?, ?& and ?| operators. And, for best performance, index them.\n",
     "\n",
-    "Step 1: Create GIN index on JSON document\n",
+    "#### Step 1: Create GIN index on JSON document\n",
     "\n",
     "GIN indexes can provide fast access to elements inside a JSON document. The following creates an index on the ‘skills’ attributes within ‘other_info’ JSON column"
    ]
@@ -996,10 +1008,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 2: Query the JSON attribute list\n",
+    "#### Step 2: Query the JSON attribute list\n",
     "\n",
     "SQL queries can navigate into the JSON document with -> and check if an array contains a value with @>. The following searches the employees with the “SQL” skill"
    ]
@@ -1044,6 +1057,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1053,9 +1067,8 @@
     "Description: \n",
     "SQL queries can search in the text for some words using the `to_tsvector()` function to extract a list of words that can be compared. We will find all department descriptions with the words 'responsible' and 'services' in it\n",
     "\n",
-    "Step 1: Create text search index on the description column\n",
-    "\n",
-    "GIN indexes can provide fast access to words inside a text. The following creates an index for the simple-grammar vector of words extracted from the department description."
+    "#### Step 1: Create text search index on the description column\n",
+    "General Inverted Indexes, known as GIN indexes, can provide fast access to words inside a text. The following creates an index for the simple-grammar vector of words extracted from the department description."
    ]
   },
   {
@@ -1101,10 +1114,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 2: Query on description for matching words\n",
+    "#### Step 2: Query on description for matching words\n",
     "\n",
     "The following compares the simple-grammar vector of words extracted from the department description with a word search pattern to find the departments which contain ‘responsible’ and ‘services’ in their description."
    ]
@@ -1125,10 +1139,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 3: Explain plan to verify that index is used\n",
+    "#### Step 3: Explain plan to verify that index is used\n",
     "\n",
     "Thanks to the GIN index, this search doesn’t need to read all rows and text. The following shows the execution plan being an indexed access path"
    ]
@@ -1149,6 +1164,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1160,7 +1176,7 @@
     "A stored procedure can encapsulate a procedural logic into an atomic operation. We will create one in PL/pgSQL, named \"commission_transfer\", that transfers commission “amount” from “empno1” to “empno2”\n",
     "\n",
     "\n",
-    "Step 1: Create the procedure for the commission transfer between employees\n",
+    "#### Step 1: Create the procedure for the commission transfer between employees\n",
     "\n",
     "The procedure has two SQL operations: \n",
     "- decrease from `empno1`\n",
@@ -1200,10 +1216,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 2: Call the procedure with employee IDs and the amount to be transferred\n",
+    "#### Step 2: Call the procedure with employee IDs and the amount to be transferred\n",
     "\n",
     "Once defined, the stored procedure is called with values for all parameters. This transfers 100 from tbl_employeesloyee 7521 to 7654"
    ]
@@ -1252,10 +1269,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 3: List all employees who have received commission\n",
+    "#### Step 3: List all employees who have received commission\n",
     "\n",
     "The following displays all employees having a commission, to verify that 100 have been transferred"
    ]
@@ -1276,12 +1294,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 4: Call the procedure with employee IDs and amount that is not allowed to invoke error handling\n",
+    "#### Step 4: Call the procedure with employee IDs and amount that is not allowed to invoke error handling\n",
     "\n",
-    "The following attempts to transfer 1000000, more than what 7521 has. It raises the “Cannot transfer” error defined in the procedure and automatically reverts all intermediate changes to return to a consistent state"
+    "The following attempts to transfer 1000000, more than what 7521 has. It raises the “Cannot transfer” error defined in the procedure and automatically reverts all intermediate changes to return to a consistent state.\n"
    ]
   },
   {
@@ -1300,6 +1319,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Note: By design, the above raises the exception."
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1309,8 +1337,8 @@
     "Description\n",
     "We will add a column to hold the last update time, and declare a trigger to update it automatically, on the departments table\n",
     "\n",
-    "SQL Statement\n",
-    "Step 1: Add a column to store the last update time\n",
+    "\n",
+    "#### Step 1: Add a column to store the last update time\n",
     "\n",
     "The structure of a SQL table can evolve. With the goal of recording the last update, the following adds a “last_update” column to the department table."
    ]
@@ -1331,10 +1359,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 2: Add a function `fn_dept_last_update` to set the last update time. The following SQL query uses the built-in function transaction_timestamp(), which returns the current date and time at the start of the current transaction\n",
+    "#### Step 2: Create a function\n",
+    "\n",
+    "Add a function `fn_dept_last_update` to set the last update time. The following SQL query uses the built-in function transaction_timestamp(), which returns the current date and time at the start of the current transaction\n",
     "\n",
     "A stored function declares some procedural logic that returns a value. The following returns the “new” state for a trigger after setting the “last_update” to the current time."
    ]
@@ -1360,10 +1391,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 3: Create a trigger `trg_dept_last_update` to call the function `fn_dept_last_update()` on each table update.\n",
+    "#### Step 3: Create a trigger\n",
+    "\n",
+    "Create a trigger `trg_dept_last_update` to call the function `fn_dept_last_update()` on each table update.\n",
     "\n",
     "The previous function can be called automatically. The following trigger executes it on each row update for the departments table."
    ]
@@ -1414,10 +1448,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 4: Display the current state of the table\n",
+    "#### Step 4: Display the current state of the table\n",
     "\n",
     "In order to verify the automatic logging of the last update time, the following displays the current state of departments before any update"
    ]
@@ -1434,15 +1469,20 @@
    "source": [
     "%%sql\n",
     "\n",
-    "select deptno,dname,loc,last_update \n",
+    "select '' _\n",
+    "  , deptno\n",
+    "  , dname\n",
+    "  , loc\n",
+    "  , last_update \n",
     "from tbl_departments;"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 5: Update multiple rows in one transaction in the dept table\n",
+    "#### Step 5: Update multiple rows in one transaction in the dept table\n",
     "\n",
     "Multiple updates can be declared in a single atomic transaction with BEGIN TRANSACTION and COMMIT. The following updates the location of departments 30 and 40 with a 3 seconds interval in between.\n"
    ]
@@ -1465,10 +1505,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 6: Display the new state of the table to see the last_update column being updated\n",
+    "#### Step 6: Display the new state of the table to see the last_update column being updated\n",
     "\n",
     "The following shows that in addition of the change location, the last update timestamp has been automatically set. Even if the updates were done at 3 seconds interval, they show the same update time because all was run in an atomic transaction\n"
    ]
@@ -1484,10 +1525,16 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "select deptno,dname,loc,last_update from tbl_departments;"
+    "select '' _\n",
+    "  , deptno\n",
+    "  , dname\n",
+    "  , loc\n",
+    "  , last_update \n",
+    "from tbl_departments;"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1498,8 +1545,8 @@
     "Description\n",
     "In order to get fast on-demand reports, we create a materialized view to store pre-joined and pre-aggregated data. This view will store the total salary per department, the number of employees, and the list of jobs in the department.\n",
     "\n",
-    "SQL Statement\n",
-    "Step 1: Create the materialized view"
+    "\n",
+    "#### Step 1: Create the materialized view"
    ]
   },
   {
@@ -1527,6 +1574,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Describe the view."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1546,10 +1601,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 2: Indexes can be created on it. This one allows fast queries on a range of total salary"
+    "#### Step 2: Create an index for the materialized view\n",
+    "\n",
+    "Indexes can be created on it. This one allows fast queries on a range of total salary"
    ]
   },
   {
@@ -1595,10 +1653,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 3: A refresh can be scheduled on a daily basis to re-compute it in the background with a simple command."
+    "#### Step 3: Refresh\n",
+    "\n",
+    "A refresh can be scheduled on a daily basis to re-compute it in the background with a simple command."
    ]
   },
   {
@@ -1617,10 +1678,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 4: Querying the materialized view will show the data consistent as of the last refresh. This one lists the departments with a total salary lower than 10000"
+    "#### Step 4: Query\n",
+    "\n",
+    "Querying the materialized view will show the data consistent as of the last refresh. This one lists the departments with a total salary lower than 10000"
    ]
   },
   {
@@ -1643,10 +1707,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 5: The execution plan shows that no additional join or group by are needed when querying this materialized view:"
+    "#### Step 5: View the query plan\n",
+    "\n",
+    "The execution plan shows that no additional join or group by are needed when querying this materialized view:"
    ]
   },
   {
@@ -1722,7 +1789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
