--- a/04_YSQL_Development_Advanced.ipynb
+++ b/04_YSQL_Development_Advanced.ipynb
@@ -279,8 +279,9 @@
     "\n",
     "ORDER_DDL_PATH=${DATA_FOLDER}/${DATA_DDL_FILE}\n",
     "ORDER_DML_PATH=${DATA_FOLDER}/${DATA_DML_FILE}\n",
-    "#echo $ORDER_DDL_PATH\n",
-    "#echo $ORDER_DML_PATH\n",
+    "\n",
+    "echo $ORDER_DDL_PATH\n",
+    "echo $ORDER_DML_PATH\n",
     "\n",
     "cd $YB_PATH\n",
     "\n",
@@ -891,6 +892,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the partition for the US region with the assigned tablespace."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -915,6 +924,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the partition for the EU region with the assigned tablespace."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -936,6 +953,14 @@
     "    primary key (user_id hash, account_id, geo_partition)\n",
     ") for values in ('EU') \n",
     "tablespace tblspace_eu;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the partition for the AP region with the assigned tablespace."
    ]
   },
   {
@@ -1002,6 +1027,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verify the inserts for AP."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1018,45 +1051,18 @@
     "  , account_id\n",
     "  , geo_partition\n",
     "from tbl_transactions\n",
+    "where 1=1\n",
+    "  and geo_partition ='AP'\n",
+    "-- and geo_partition ='EU'\n",
+    "--  and geo_partition ='US'\n",
     "limit 10;"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### q1 | Query the local partition"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "select '' _\n",
-    "  , user_id\n",
-    "  , account_id\n",
-    "  , geo_partition\n",
-    "from tbl_transactions \n",
-    "where 1=1 \n",
-    " and user_id = 1\n",
-    " and yb_is_local_table(tableoid)\n",
-    "limit 10;"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### q1a | View the explain plan and metrics\n",
+    "#### View the explain plan and metrics\n",
     "\n",
     "In this example, we are using Object Identifiers to locate the partition table that is associated with the row of data."
    ]
@@ -1096,7 +1102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### q1b | Explain Plan (above ^^)"
+    "Review the Explain Plan (above ^^) and view the metrics."
    ]
   },
   {
@@ -1149,7 +1155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
