--- a/bak/00_Local_Only.ipynb
+++ b/bak/00_Local_Only.ipynb
@@ -5,7 +5,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#IMPORTANT: Notebook requirements and how start YugabyteDB locally (mac/linux) with yb-ctl"
+    "# IMPORTANT!!!\n",
+    "> Move out of bak, otherwise can't read the env_vars.env file as is.\n",
+    ">\n",
+    "> \n",
+    "\n",
+    "Notebook requirements and how start YugabyteDB locally (mac/linux) with yb-ctl"
    ]
   },
   {
@@ -32,6 +37,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install --upgrade pip\n",
+    "!pip install ipython-sql~=0.5 --upgrade\n",
+    "!pip install psycopg2-binary\n",
+    "!pip install SQLAlchemy --upgrade \n",
+    "!pip install sqlparse\n",
+    "!pip install html2text\n",
+    "!pip install jq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Env variables for Notebook\n",
     "import os\n",
     "\n",
@@ -43,13 +63,13 @@
     "### BEGIN: Edit your MY_SUDO\n",
     "\n",
     "# Leave it blank forcing a strategy for notebook execution\n",
-    "#MY_SUDO=''\n",
+    "MY_SUDO='password'\n",
     "\n",
     "# Specify your sudo password in the cell\n",
     "#MY_SUDO='password'\n",
     "\n",
     "# env_vars defines ENV_SUDO='psswrd'\n",
-    "MY_SUDO=os.environ.get('MY_SUDO')\n",
+    "#MY_SUDO=os.environ.get('MY_SUDO')\n",
     "\n",
     "\n",
     "# bash_profile exports the variable, e.g., export GLOBAL_SUDO='psswrd' \n",
@@ -305,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.7.16"
   },
   "orig_nbformat": 4,
   "vscode": {
