--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -172,12 +172,11 @@
    "outputs": [],
    "source": [
     "#%% python, but prepared statements as sql magic\n",
-    "if (MY_GITPOD_WORKSPACE_URL is None):\n",
+    "\n",
+    "if (MY_YB_MASTER_HOST_GITPOD_URL is None):\n",
     "    a = %sql select fn_yb_create_stmts()\n",
     "else:\n",
-    "    WORKSPACE_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
-    "    a = %sql select fn_yb_create_stmts(:WORKSPACE_URL)\n",
-    "\n",
+    "    a = %sql select fn_yb_create_stmts(:MY_YB_MASTER_HOST_GITPOD_URL )\n",
     "print (a)"
    ]
   },
@@ -372,8 +371,12 @@
    "outputs": [],
    "source": [
     "#%% python, but prepared statements as sql magic\n",
-    "WORKSPACE_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
-    "view_url = %sql select fn_get_table_id(:WORKSPACE_URL,8200,'tbl_no_pk') as open_this_url_in_your_web_browser;\n",
+    "THIS_TABLE_NAME = 'tbl_no_pk'\n",
+    "THIS_SCHEMA_NAME = 'public'\n",
+    "DB_NAME = MY_DB_NAME\n",
+    "\n",
+    "\n",
+    "view_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME )\n",
     "\n",
     "print (view_url)"
    ]
@@ -571,9 +574,11 @@
    "outputs": [],
    "source": [
     "#%% python, but prepared statements as sql magic\n",
-    "THIS_TABLE_NAME='tbl_pk_hash'\n",
-    "WORKSPACE_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
-    "view_url = %sql select fn_get_table_id(:WORKSPACE_URL,8200,:THIS_TABLE_NAME) as open_this_url_in_your_web_browser ;\n",
+    "THIS_TABLE_NAME = 'tbl_pk_hash'\n",
+    "THIS_SCHEMA_NAME = 'public'\n",
+    "DB_NAME = MY_DB_NAME\n",
+    "\n",
+    "view_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME )\n",
     "\n",
     "print (view_url)"
    ]
@@ -681,10 +686,10 @@
     "from tbl_pk_hash\n",
     "where 1=1 \n",
     "-- and k=123\n",
-    "order by k asc\n",
+    "-- order by k asc\n",
     "-- order by k desc\n",
     "-- offset 330\n",
-    "-- offset 660\n",
+    "offset 660\n",
     "limit 30\n",
     ";\n"
    ]
@@ -752,7 +757,7 @@
     "  , fn_find_hash_code_in_partition_hex_range(yb_hash_code( k::int),'hash_split: [0xAAAA, 0xFFFF)'::text) as col_0xAAAA_0xFFFF\n",
     "from tbl_pk_hash\n",
     "where 1=1 \n",
-    "-- and k=123\n",
+    "and k=123\n",
     "order by k asc\n",
     "-- order by k desc\n",
     "-- offset 330\n",
@@ -870,7 +875,7 @@
     "  v2 text,\n",
     "  v3 text,\n",
     "  primary key (k hash)\n",
-    "  --primary key (k hash, v1 asc)\n",
+    "  -- primary key (k hash, v1 asc)\n",
     "  --primary key (k hash, v1 asc, v2 asc) \n",
     ");\n",
     "\n",
@@ -917,8 +922,7 @@
    "outputs": [],
    "source": [
     "MY_OBJECT_NAME = \"tbl_pk_hash_ck_asc\"\n",
-    "%store MY_OBJECT_NAME\n",
-    "#%sql MY_TABLE_ID << select fn_get_table_id_from_pg('public', :MY_TABLE_NAME);"
+    "%store MY_OBJECT_NAME\n"
    ]
   },
   {
@@ -946,7 +950,7 @@
     "OBJECT_NAME=${3}\n",
     "\n",
     "cd $YB_PATH\n",
-    "MY_TABLE_ID=$(./bin/ysqlsh -d ${DB_NAME} -t -c \"select fn_get_table_id_from_pg('public','${OBJECT_NAME}');\")\n",
+    "MY_TABLE_ID=$(./bin/ysqlsh -d ${DB_NAME} -t -c \"select fn_get_table_id_from_pg('${DB_NAME}','public','${OBJECT_NAME}');\")\n",
     "\n",
     "echo $MY_TABLE_ID"
    ]
@@ -974,7 +978,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the `tablet_id` for the tablet leader for the selected node host."
+    "Get the `tablet_id` for the tablet leader for the selected node host.\n",
+    "TODO: Update for Gitpod"
    ]
   },
   {
@@ -1577,7 +1582,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "gp open 04_YSQL_Development_Advanced.ipynb"
+    "gp open '04_YSQL_Development_Advanced.ipynb'"
    ]
   }
  ],
