--- a/00_Local_Only.ipynb
+++ b/00_Local_Only.ipynb
@@ -48,9 +48,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'MY_SUDO' (str)\n",
+      "Stored 'MY_DB_NAME' (str)\n",
+      "Stored 'MY_YB_PATH' (str)\n",
+      "Stored 'MY_HOST_IPv4_01' (str)\n",
+      "Stored 'MY_HOST_IPv4_02' (str)\n",
+      "Stored 'MY_HOST_IPv4_03' (str)\n",
+      "Stored 'MY_NOTEBOOK_DIR' (str)\n",
+      "Stored 'MY_TSERVER_WEBSERVER_PORT' (str)\n",
+      "Stored 'MY_NOTEBOOK_DATA_FOLDER' (str)\n",
+      "Stored 'MY_NOTEBOOK_UTILS_FOLDER' (str)\n",
+      "Stored 'MY_DATA_DDL_FILE_1' (str)\n",
+      "Stored 'MY_DATA_DML_FILE_1' (str)\n",
+      "Stored 'MY_UTIL_FUNCTIONS_FILE' (str)\n",
+      "Stored 'MY_UTIL_YBTSERVER_METRICS_FILE' (str)\n"
+     ]
+    }
+   ],
    "source": [
     "# Env variables for Notebook\n",
     "import os\n",
@@ -63,17 +84,17 @@
     "### BEGIN: Edit your MY_SUDO\n",
     "\n",
     "# Leave it blank forcing a strategy for notebook execution\n",
-    "MY_SUDO='password'\n",
+    "# MY_SUDO=''\n",
     "\n",
     "# Specify your sudo password in the cell\n",
     "#MY_SUDO='password'\n",
     "\n",
     "# env_vars defines ENV_SUDO='psswrd'\n",
-    "#MY_SUDO=os.environ.get('MY_SUDO')\n",
+    "MY_SUDO=os.environ.get('MY_SUDO')\n",
     "\n",
     "\n",
-    "# bash_profile exports the variable, e.g., export GLOBAL_SUDO='psswrd' \n",
-    "#MY_SUDO=os.environ.get('GLOBAL_SUDO')\n",
+    "# bash_profSile exports the variable, e.g., export GLOBAL_SUDO='psswrd' \n",
+    "MY_SUDO=os.environ.get('GLOBAL_SUDO')\n",
     "\n",
     "### END: MY_SUDO\n",
     "\n",
@@ -137,13 +158,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lo0: flags=8049<UP,LOOPBACK,RUNNING,MULTICAST> mtu 16384\n",
+      "\toptions=1203<RXCSUM,TXCSUM,TXSTATUS,SW_TIMESTAMP>\n",
+      "\tinet 127.0.0.1 netmask 0xff000000 \n",
+      "\tinet6 ::1 prefixlen 128 \n",
+      "\tinet6 fe80::1%lo0 prefixlen 64 scopeid 0x1 \n",
+      "\tinet 127.0.0.2 netmask 0xff000000 \n",
+      "\tinet 127.0.0.3 netmask 0xff000000 \n",
+      "\tinet 127.0.0.4 netmask 0xff000000 \n",
+      "\tinet 127.0.0.5 netmask 0xff000000 \n",
+      "\tinet 127.0.0.6 netmask 0xff000000 \n",
+      "\tinet 127.0.0.7 netmask 0xff000000 \n",
+      "\tnd6 options=201<PERFORMNUD,DAD>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Password:"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$MY_SUDO\"  # ifconfig aliases\n",
     "MY_SUDO=${1}\n",
@@ -179,13 +226,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Destroying cluster.\n",
+      "Creating cluster.\n",
+      "Waiting for cluster to be ready.\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| Node Count: 3 | Replication Factor: 3                                                            |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| JDBC                : jdbc:postgresql://127.0.0.1:5433/yugabyte                                  |\n",
+      "| YSQL Shell          : bin/ysqlsh                                                                 |\n",
+      "| YCQL Shell          : bin/ycqlsh                                                                 |\n",
+      "| YEDIS Shell         : bin/redis-cli                                                              |\n",
+      "| Web UI              : http://127.0.0.1:7000/                                                     |\n",
+      "| Cluster Data        : /Users/seth/yugabyte-data                                                  |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "For more info, please use: yb-ctl status\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| Node Count: 3 | Replication Factor: 3                                                            |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| JDBC                : jdbc:postgresql://127.0.0.1:5433/yugabyte                                  |\n",
+      "| YSQL Shell          : bin/ysqlsh                                                                 |\n",
+      "| YCQL Shell          : bin/ycqlsh                                                                 |\n",
+      "| YEDIS Shell         : bin/redis-cli                                                              |\n",
+      "| Web UI              : http://127.0.0.1:7000/                                                     |\n",
+      "| Cluster Data        : /Users/seth/yugabyte-data                                                  |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| Node 1: yb-tserver (pid 50598), yb-master (pid 50589)                                            |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| JDBC                : jdbc:postgresql://127.0.0.1:5433/yugabyte                                  |\n",
+      "| YSQL Shell          : bin/ysqlsh                                                                 |\n",
+      "| YCQL Shell          : bin/ycqlsh                                                                 |\n",
+      "| YEDIS Shell         : bin/redis-cli                                                              |\n",
+      "| data-dir[0]         : /Users/seth/yugabyte-data/node-1/disk-1/yb-data                            |\n",
+      "| yb-tserver Logs     : /Users/seth/yugabyte-data/node-1/disk-1/yb-data/tserver/logs               |\n",
+      "| yb-master Logs      : /Users/seth/yugabyte-data/node-1/disk-1/yb-data/master/logs                |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| Node 2: yb-tserver (pid 50601), yb-master (pid 50592)                                            |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| JDBC                : jdbc:postgresql://127.0.0.2:5433/yugabyte                                  |\n",
+      "| YSQL Shell          : bin/ysqlsh -h 127.0.0.2                                                    |\n",
+      "| YCQL Shell          : bin/ycqlsh 127.0.0.2                                                       |\n",
+      "| YEDIS Shell         : bin/redis-cli -h 127.0.0.2                                                 |\n",
+      "| data-dir[0]         : /Users/seth/yugabyte-data/node-2/disk-1/yb-data                            |\n",
+      "| yb-tserver Logs     : /Users/seth/yugabyte-data/node-2/disk-1/yb-data/tserver/logs               |\n",
+      "| yb-master Logs      : /Users/seth/yugabyte-data/node-2/disk-1/yb-data/master/logs                |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| Node 3: yb-tserver (pid 50604), yb-master (pid 50595)                                            |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| JDBC                : jdbc:postgresql://127.0.0.3:5433/yugabyte                                  |\n",
+      "| YSQL Shell          : bin/ysqlsh -h 127.0.0.3                                                    |\n",
+      "| YCQL Shell          : bin/ycqlsh 127.0.0.3                                                       |\n",
+      "| YEDIS Shell         : bin/redis-cli -h 127.0.0.3                                                 |\n",
+      "| data-dir[0]         : /Users/seth/yugabyte-data/node-3/disk-1/yb-data                            |\n",
+      "| yb-tserver Logs     : /Users/seth/yugabyte-data/node-3/disk-1/yb-data/tserver/logs               |\n",
+      "| yb-master Logs      : /Users/seth/yugabyte-data/node-3/disk-1/yb-data/master/logs                |\n",
+      "----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$MY_YB_PATH\" \"$MY_TSERVER_WEBSERVER_PORT\"  # yb-ctl create\n",
     "YB_PATH=${1}\n",
@@ -286,13 +398,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                   List of databases\n",
+      "      Name       |  Owner   | Encoding | Collate |    Ctype    |   Access privileges   \n",
+      "-----------------+----------+----------+---------+-------------+-----------------------\n",
+      " db_ybu          | yugabyte | UTF8     | C       | en_US.UTF-8 | \n",
+      " postgres        | postgres | UTF8     | C       | en_US.UTF-8 | \n",
+      " system_platform | postgres | UTF8     | C       | en_US.UTF-8 | \n",
+      " template0       | postgres | UTF8     | C       | en_US.UTF-8 | =c/postgres          +\n",
+      "                 |          |          |         |             | postgres=CTc/postgres\n",
+      " template1       | postgres | UTF8     | C       | en_US.UTF-8 | =c/postgres          +\n",
+      "                 |          |          |         |             | postgres=CTc/postgres\n",
+      " yugabyte        | postgres | UTF8     | C       | en_US.UTF-8 | \n",
+      "(6 rows)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:  database \"db_ybu\" is being accessed by other users\n",
+      "DETAIL:  There are 2 other sessions using the database.\n",
+      "ERROR:  database \"db_ybu\" already exists\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # create database\n",
     "YB_PATH=${1}\n",
