--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -170,21 +170,19 @@
     "    key, value = var.split('=')\n",
     "    os.environ[key] = value\n",
     "\n",
-    "\n",
-    "\n",
     "### Begin: Gitpod or local\n",
     "#\n",
     "### Uncomment Gitpod specific\n",
     "#\n",
-    "MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
-    "MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA')\n",
-    "MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
+    "#MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
+    "#MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA')\n",
+    "#MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
     "#\n",
     "### Comment out Local \n",
     "#\n",
-    "# MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
-    "# MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_LOCAL')\n",
-    "# MY_GITPOD_WORKSPACE_URL=os.environ.get('MY_GITPOD_WORKSPACE_URL_LOCAL')\n",
+    "MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
+    "MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_LOCAL')\n",
+    "MY_GITPOD_WORKSPACE_URL=os.environ.get('MY_GITPOD_WORKSPACE_URL_LOCAL')\n",
     "##\n",
     "### End: Gitpod or local\n",
     "\n",
@@ -276,7 +274,8 @@
     "\n",
     "cd $YB_PATH\n",
     "\n",
-    "# drop and create\n",
+    "# terminate connections, drop, and create\n",
+    "./bin/ysqlsh -d yugabyte -c \"select pg_terminate_backend(pid) from pg_stat_activity where datname = '\"${DB_NAME}\"';\"  \n",
     "./bin/ysqlsh -d yugabyte -c \"drop database if exists \"${DB_NAME}\";\"  \n",
     "./bin/ysqlsh -d yugabyte -c \"create database \"${DB_NAME}\";\" \n",
     "\n",
@@ -617,7 +616,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "gp open 02_YSQL_Development.ipynb"
+    "gp open '02_YSQL_Development.ipynb'"
    ]
   }
  ],
