Updates for Gitpod wget

--- a/00_Local_Only_Setup_MacOS.ipynb
+++ b/00_Local_Only_Setup_MacOS.ipynb
@@ -5,30 +5,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IMPORTANT!!!\n",
-    "> Move out of bak, otherwise can't read the env_vars.env file as is.\n",
-    ">\n",
-    "> \n",
+    "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\" href=\"http://university.yugabyte.com\"><img src=\"assets/YBU_Logo.png\" /></a></div>\n",
     "\n",
-    "Notebook requirements and how start YugabyteDB locally (mac/linux) with yb-ctl"
+    "> **YugabyteDB YSQL Development**\n",
+    ">\n",
+    "> Enroll for free  [Yugabyte University](https://university.yugabyte.com/).\n",
+    ">\n",
+    "\n",
+    "# Requirements to run this locally\n",
+    "Here are the requirements to run this notebook locally:\n",
+    "- Download and install YugabyteDB\n",
+    "- Update the `env_vars.env` file\n",
+    "- Install Python 3.8 or higher\n",
+    "- \n",
+    "## Download and install YugabyteDB\n",
+    "To run this notebook locally in VS Code on MacOs or Linux, you must download and install YugabyteDB:\n",
+    "### MacOS \n",
+    "You can download YugabyteDB for the MacOS at [https://download.yugabyte.com/#macos](https://download.yugabyte.com/#macos).\n",
+    "\n",
+    "### Linux\n",
+    "You can download YugabyteDB for Linux at [https://download.yugabyte.com/#linux](https://download.yugabyte.com/#linux).\n",
+    "\n",
+    "### Docker\n",
+    "You can download YugabyteDB for Docker at [https://download.yugabyte.com/#docker](https://download.yugabyte.com/#docker).\n",
+    "\n",
+    "## Update the `env_vars.env` file\n",
+    "After installing YugabyteDB locally, you need to update these paths in `env_vars.env`:\n",
+    "```\n",
+    "MY_YB_PATH_LOCAL_2.16=/Users/seth/yugabyte/yugabyte-2.16.3.0\n",
+    "MY_YB_PATH_LOCAL=/Users/seth/yugabyte/yugabyte-2.17.3.0\n",
+    "MY_YB_PATH_DATA_LOCAL=/Users/seth/yugabyte-data\n",
+    "```\n",
+    "\n",
+    "## Install Python 3.8 or higher\n",
+    "For MacOs, PyEnv is probably the easiest way to install. You can learn more at:\n",
+    "- [https://github.com/pyenv/pyenv](https://github.com/pyenv/pyenv)\n",
+    "- [https://realpython.com/intro-to-pyenv/](https://realpython.com/intro-to-pyenv/)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create the notebook variables \n",
-    "\n",
-    "> IMPORTANT!\n",
-    "> \n",
-    "> Do NOT skip editing and running this cell. \n",
-    "> \n",
-    "\n",
-    "\n",
-    "The following Python cell creates and stores the Jupyter notebook variables.\n",
-    "- First, edit the script to select how to assign a value to `MY_SUDO`.\n",
-    "- To run the script, select Execute Cell (Play Arrow in the cell side bar).\n",
-    "- Verify the accuracy of the output values"
+    "---\n",
+    "# Update the notebook dependencies."
    ]
   },
   {
@@ -44,6 +65,27 @@
     "!pip install sqlparse\n",
     "!pip install html2text\n",
     "!pip install jq"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create the notebook variables \n",
+    "\n",
+    "> IMPORTANT!\n",
+    "> \n",
+    "> Do NOT skip editing and running this cell. \n",
+    "> \n",
+    "\n",
+    "The following Python cell creates and stores the Jupyter notebook variables.\n",
+    "- First, edit the script to select how to assign a value to `MY_SUDO`.\n",
+    "- To run the script, select Execute Cell (Play Arrow in the cell side bar).\n",
+    "- Verify the accuracy of the output values\n",
+    "\n",
+    "> About sudo and MacOS\n",
+    "> You'll need to supply your sudo password to create the loopback addresses."
    ]
   },
   {
@@ -63,17 +105,16 @@
     "### BEGIN: Edit your MY_SUDO\n",
     "\n",
     "# Leave it blank forcing a strategy for notebook execution\n",
-    "# MY_SUDO=''\n",
+    "MY_SUDO=''\n",
     "\n",
     "# Specify your sudo password in the cell\n",
-    "#MY_SUDO='password'\n",
+    "#MY_SUDO='psswrd'\n",
     "\n",
     "# env_vars defines ENV_SUDO='psswrd'\n",
-    "MY_SUDO=os.environ.get('MY_SUDO')\n",
-    "\n",
+    "# MY_SUDO=os.environ.get('MY_SUDO')\n",
     "\n",
     "# bash_profSile exports the variable, e.g., export GLOBAL_SUDO='psswrd' \n",
-    "MY_SUDO=os.environ.get('GLOBAL_SUDO')\n",
+    "# MY_SUDO=os.environ.get('GLOBAL_SUDO')\n",
     "\n",
     "### END: MY_SUDO\n",
     "\n",
@@ -81,7 +122,7 @@
     "# Create and assign notebook variables\n",
     "# env_vars defines the following\n",
     "MY_DB_NAME=os.environ.get('MY_DB_NAME')\n",
-    "# MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
+    "# MY_YB_PATH=os.environ.get('MY_YB_PATH_GITPOD')\n",
     "MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
     "MY_GITPOD_WORKSPACE_URL=os.environ.get('MY_GITPOD_WORKSPACE_URL_LOCAL')\n",
     "\n",
@@ -118,10 +159,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create the loopback host aliases\n",
+    "### Create the loopback host aliases for MacOS\n",
     "> Important!\n",
     "> \n",
     "> The script requires the password for `sudo`.\n",
@@ -225,24 +267,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [],
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_TSERVER_WEBSERVER_PORT\"  # yb-ctl create\n",
-    "YB_PATH=${1}\n",
-    "TSERVER_WEBSERVER_PORT=${2}\n",
-    "\n",
-    "cd $YB_PATH\n",
-    "\n",
-    "\n",
-    "# Output status\n",
-    "./bin/yb-ctl status"
+    "In the above, you'll see the status of the YugabyteDB cluster running locally."
    ]
   },
   {
@@ -306,6 +335,16 @@
     "\n",
     "# list dbs\n",
     "./bin/ysqlsh -d yugabyte -c \"\\l\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# 🌟 Well done! \n",
+    "In this notebook, you setup a running YugabyteDB cluster. You'r ready to move to the Lab."
    ]
   }
  ],
