--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -10,9 +10,9 @@
    "source": [
     "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\" href=\"http://university.yugabyte.com\"><img src=\"assets/YBU_Logo.png\" /></a></div>\n",
     "\n",
-    "> **YugabyteDB YSL Development**\n",
+    "> **YugabyteDB YSQL Development**\n",
     ">\n",
-    "> Enroll for free at [Yugabyte University](https://university.yugabyte.com/).\n",
+    "> Enroll for free  [Yugabyte University](https://university.yugabyte.com/).\n",
     ">\n",
     "\n",
     "# Introduction\n",
@@ -174,15 +174,15 @@
     "#\n",
     "### Uncomment Gitpod specific\n",
     "#\n",
-    "MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
-    "MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA')\n",
-    "MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
+    "# MY_YB_PATH=os.environ.get('MY_YB_PATH_GITPOD')\n",
+    "# MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_GITPOD')\n",
+    "# MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
     "#\n",
     "### Comment out Local \n",
     "#\n",
-    "#MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
-    "#MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_LOCAL')\n",
-    "#MY_GITPOD_WORKSPACE_URL=os.environ.get('MY_GITPOD_WORKSPACE_URL_LOCAL')\n",
+    "# MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
+    "# MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_LOCAL')\n",
+    "# MY_GITPOD_WORKSPACE_URL=os.environ.get('MY_GITPOD_WORKSPACE_URL_LOCAL')\n",
     "##\n",
     "### End: Gitpod or local\n",
     "\n",
@@ -375,7 +375,7 @@
     "./bin/ysqlsh -d ${DB_NAME} -f ${UTIL_YBTSERVER_METRICS_FILE} >&/dev/null\n",
     "\n",
     "# Describe relations\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\df public.fn_*\""
+    "./bin/ysqlsh -d ${DB_NAME} -c \"\\df public.fn_yb*\""
    ]
   },
   {
