--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -349,19 +349,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### View the Table details in the YB-Master web ui\n",
     "To better understand the Metrics report, you can view the details of a table in the YB-Master web ui.\n",
     "\n",
-    "From the `row_name` column, copy the Gitpod URL (`https://7000-yugabytedbu-ysqlpe03whe-um13wtg7p0o.ws-us54.gitpod.io/table?id=00004000000030008000000000004039)` into your web browser, and view the table details, namely the Columns section and the Tablets section\n",
-    "\n",
     "> Note\n",
     ">  \n",
     ">  In gitpod, only the `127.0.0.1` host is available on port 7000, and will show as `https://7000-yugabytedbu-ysqlpe03whe-um13wtg7p0o.ws-us54.gitpod.io/table?id=00004000000030008000000000004039` . You are not able to browse `127.0.0.2` or `127.0.0.3`\n",
     "\n",
-    "Or, you can run code below to get the URL to open in your web browser."
+    "Run the cell  below to get the URL to open in your web browser. If you are running cell this locally, comment and uncomment as directed."
    ]
   },
   {
@@ -375,10 +374,13 @@
     "THIS_SCHEMA_NAME = 'public'\n",
     "DB_NAME = MY_DB_NAME\n",
     "\n",
+    "## Comment out if local\n",
+    "view_gitpod_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
+    "print (view_gitpod_url)\n",
     "\n",
-    "view_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME )\n",
-    "\n",
-    "print (view_url)"
+    "## Uncomment if local\n",
+    "# view_local_url = %sql select fn_get_table_id_url(:MY_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
+    "# print (view_local_url)"
    ]
   },
   {
@@ -578,9 +580,13 @@
     "THIS_SCHEMA_NAME = 'public'\n",
     "DB_NAME = MY_DB_NAME\n",
     "\n",
-    "view_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME )\n",
+    "## Comment out if local\n",
+    "view_gitpod_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
+    "print (view_gitpod_url)\n",
     "\n",
-    "print (view_url)"
+    "## Uncomment if local\n",
+    "# view_local_url = %sql select fn_get_table_id_url(:MY_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
+    "# print (view_local_url)"
    ]
   },
   {
@@ -757,7 +763,7 @@
     "  , fn_find_hash_code_in_partition_hex_range(yb_hash_code( k::int),'hash_split: [0xAAAA, 0xFFFF)'::text) as col_0xAAAA_0xFFFF\n",
     "from tbl_pk_hash\n",
     "where 1=1 \n",
-    "and k=123\n",
+    "-- and k=123\n",
     "order by k asc\n",
     "-- order by k desc\n",
     "-- offset 330\n",
@@ -868,14 +874,13 @@
     "\n",
     "drop table if exists tbl_pk_hash_ck_asc;\n",
     "\n",
-    "\n",
     "create table if not exists tbl_pk_hash_ck_asc (\n",
     "  k int, \n",
     "  v1 text, \n",
     "  v2 text,\n",
     "  v3 text,\n",
-    "  primary key (k hash)\n",
-    "  -- primary key (k hash, v1 asc)\n",
+    "  -- primary key (k hash)\n",
+    "  primary key (k hash, v1 asc)\n",
     "  --primary key (k hash, v1 asc, v2 asc) \n",
     ");\n",
     "\n",
@@ -978,8 +983,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the `tablet_id` for the tablet leader for the selected node host.\n",
-    "TODO: Update for Gitpod"
+    "Get the `tablet_id` for the tablet leader for the selected node host."
    ]
   },
   {
@@ -999,7 +1003,8 @@
     "HOST_IPv4=$( echo \"${3}\" | tr -d \" \")\n",
     "# can use WORKSPACE_URL\n",
     "MY_URL=\"http://${HOST_IPv4}:8200/metrics\"\n",
-    "TABLET_ID=`curl -s --compressed ${MY_URL} | jq --raw-output ' .[] | select(.attributes.namespace_name==\"'$DB_NAME'\" and .type==\"tablet\" and .attributes.table_name==\"'$OBJECT_NAME'\") | {tablet_id: .id, metrics: .metrics[] | select(.name == (\"is_raft_leader\") ) | select(.value == 1) } | select(.tablet_id) | {tablet_id} | .tablet_id '`\n",
+    "\n",
+    "TABLET_ID=`wget -cq  ${MY_URL}  -O - |  jq --raw-output ' .[] | select(.attributes.namespace_name==\"'$DB_NAME'\" and .type==\"tablet\" and .attributes.table_name==\"'$OBJECT_NAME'\") | {tablet_id: .id, metrics: .metrics[] | select(.name == (\"is_raft_leader\") ) | select(.value == 1) } | select(.tablet_id) | {tablet_id} | .tablet_id '`\n",
     "\n",
     "echo ${TABLET_ID}"
    ]
@@ -1083,6 +1088,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can go back to the beginning of  ***What's on disk?** an alter the Primary Key definition and run through the SST dump again. "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1150,10 +1163,17 @@
    "outputs": [],
    "source": [
     "#%% python, but prepared statements as sql magic\n",
-    "WORKSPACE_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
-    "view_url = %sql select fn_get_table_id(:WORKSPACE_URL,8200,'tbl_pk_range') as open_this_url_in_your_web_browser ;\n",
+    "THIS_TABLE_NAME = 'tbl_pk_range'\n",
+    "THIS_SCHEMA_NAME = 'public'\n",
+    "DB_NAME = MY_DB_NAME\n",
     "\n",
-    "print (view_url)"
+    "## Comment out if local\n",
+    "view_gitpod_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
+    "print (view_gitpod_url)\n",
+    "\n",
+    "## Uncomment if local\n",
+    "# view_local_url = %sql select fn_get_table_id_url(:MY_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
+    "# print (view_local_url)"
    ]
   },
   {
